--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Package: com.greenglasst.ytenhanced
 Name: YTEnhanced
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: My favorite YouTube Tweaks!
 Maintainer: GreenglassT
 Author: GreenglassT
 Section: Tweaks
